# processWatchdog

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  config.ini  monitor.sh  processWatchdog.pro  processwatchdog.service  run.sh  test_child.py
.github/workflows/: c-cpp.yml
src/: apps.c  apps.h  cmd.c  cmd.h  config.c  config.h  filecmd.c  filecmd.h  heartbeat.c  heartbeat.h  ini.c  ini.h  log.c  log.h  main.c  process.c  process.h  server.c  server.h  stats.c  stats.h  test.c  test.h  utils.c  utils.h
test/: CMakeLists.txt  server_test.cpp
